219. Becoming one with the data and visualising a text dataset

--- a/08_introduction_to_nlp_in_tensorflow.ipynb
+++ b/08_introduction_to_nlp_in_tensorflow.ipynb
@@ -51,11 +51,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "3FjVZH_blBRM",
-        "outputId": "ef571252-fa81-46ac-9cbb-3d113a117fc0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "3FjVZH_blBRM",
+        "outputId": "ef571252-fa81-46ac-9cbb-3d113a117fc0"
       },
       "source": [
         "!nvidia-smi -L"
@@ -83,11 +83,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "xY5LbWNzlPNN",
-        "outputId": "0c1164fb-7363-486c-e386-8e061831391f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "xY5LbWNzlPNN",
+        "outputId": "0c1164fb-7363-486c-e386-8e061831391f"
       },
       "source": [
         "!wget https://raw.githubusercontent.com/mrdbourke/tensorflow-deep-learning/main/extras/helper_functions.py\n",
@@ -132,11 +132,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "jexI6M-Dl9p0",
-        "outputId": "7560db86-d451-40b6-dc53-dd95a2a8dc4c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "jexI6M-Dl9p0",
+        "outputId": "7560db86-d451-40b6-dc53-dd95a2a8dc4c"
       },
       "source": [
         "!wget https://storage.googleapis.com/ztm_tf_course/nlp_getting_started.zip"
@@ -175,12 +175,508 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "tV3ckHJJmaPj"
       },
       "source": [
-        "## Become one with the data"
+        "## Visualizing a text dataset\n",
+        "\n",
+        "To visualize our text samples, we first have to read them in , one way to do sou would be to use Python : https://realpython.com/python-csv/\n",
+        "\n",
+        "But I prefer to get visual straight away.\n",
+        "So another way to do is to use pandas...\n",
+        "\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oAYMkJOemzy2",
+        "outputId": "cf69f6d5-655d-4a53-a115-aef97a15e94a",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "import pandas as pd\n",
+        "\n",
+        "train_df = pd.read_csv(\"train.csv\")\n",
+        "test_df = pd.read_csv(\"test.csv\")\n",
+        "train_df.head()"
+      ],
+      "execution_count": 9,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>keyword</th>\n",
+              "      <th>location</th>\n",
+              "      <th>text</th>\n",
+              "      <th>target</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Our Deeds are the Reason of this #earthquake M...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>4</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Forest fire near La Ronge Sask. Canada</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>5</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>All residents asked to 'shelter in place' are ...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>6</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>13,000 people receive #wildfires evacuation or...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>7</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Just got sent this photo from Ruby #Alaska as ...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   id keyword  ...                                               text target\n",
+              "0   1     NaN  ...  Our Deeds are the Reason of this #earthquake M...      1\n",
+              "1   4     NaN  ...             Forest fire near La Ronge Sask. Canada      1\n",
+              "2   5     NaN  ...  All residents asked to 'shelter in place' are ...      1\n",
+              "3   6     NaN  ...  13,000 people receive #wildfires evacuation or...      1\n",
+              "4   7     NaN  ...  Just got sent this photo from Ruby #Alaska as ...      1\n",
+              "\n",
+              "[5 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 9
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "uLt6Z1v4qfQF",
+        "outputId": "52240891-b8ae-494a-82d0-21c5471f501d",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "# Shuffle training dataframe\n",
+        "\n",
+        "train_df_shuffled = train_df.sample(frac=1, random_state=42)\n",
+        "train_df_shuffled.head()"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>keyword</th>\n",
+              "      <th>location</th>\n",
+              "      <th>text</th>\n",
+              "      <th>target</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2644</th>\n",
+              "      <td>3796</td>\n",
+              "      <td>destruction</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>So you have a new weapon that can cause un-ima...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2227</th>\n",
+              "      <td>3185</td>\n",
+              "      <td>deluge</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>The f$&amp;amp;@ing things I do for #GISHWHES Just...</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5448</th>\n",
+              "      <td>7769</td>\n",
+              "      <td>police</td>\n",
+              "      <td>UK</td>\n",
+              "      <td>DT @georgegalloway: RT @Galloway4Mayor: ÛÏThe...</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>132</th>\n",
+              "      <td>191</td>\n",
+              "      <td>aftershock</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Aftershock back to school kick off was great. ...</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6845</th>\n",
+              "      <td>9810</td>\n",
+              "      <td>trauma</td>\n",
+              "      <td>Montgomery County, MD</td>\n",
+              "      <td>in response to trauma Children of Addicts deve...</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "        id  ... target\n",
+              "2644  3796  ...      1\n",
+              "2227  3185  ...      0\n",
+              "5448  7769  ...      1\n",
+              "132    191  ...      0\n",
+              "6845  9810  ...      0\n",
+              "\n",
+              "[5 rows x 5 columns]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bwy-5G_BqPvB",
+        "outputId": "5e1ba479-bfb9-4463-a4ed-3b3dbda403bc",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 204
+        }
+      },
+      "source": [
+        "# What does the test dataframe look like ?\n",
+        "test_df.head()"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>id</th>\n",
+              "      <th>keyword</th>\n",
+              "      <th>location</th>\n",
+              "      <th>text</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>0</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Just happened a terrible car crash</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Heard about #earthquake is different cities, s...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>there is a forest fire at spot pond, geese are...</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>9</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Apocalypse lighting. #Spokane #wildfires</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>11</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>Typhoon Soudelor kills 28 in China and Taiwan</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   id keyword location                                               text\n",
+              "0   0     NaN      NaN                 Just happened a terrible car crash\n",
+              "1   2     NaN      NaN  Heard about #earthquake is different cities, s...\n",
+              "2   3     NaN      NaN  there is a forest fire at spot pond, geese are...\n",
+              "3   9     NaN      NaN           Apocalypse lighting. #Spokane #wildfires\n",
+              "4  11     NaN      NaN      Typhoon Soudelor kills 28 in China and Taiwan"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "hf61kpvLrsuW",
+        "outputId": "3bf8a0c7-da3f-4f5f-b2de-fadcf827a6e4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# How many examples of each class?\n",
+        "\n",
+        "train_df.target.value_counts()"
+      ],
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0    4342\n",
+              "1    3271\n",
+              "Name: target, dtype: int64"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 16
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kEtEltU5r_jJ"
+      },
+      "source": [
+        " > **Note** : If your data is not balanced, there are some things you can do for imbalanced dataset\n",
+        "https://www.tensorflow.org/tutorials/structured_data/imbalanced_data"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Tur_lZTQshxw",
+        "outputId": "44b4543b-6da0-4f58-d2b1-76cda4745310",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# How many total samples ?\n",
+        "len(train_df), len(test_df)"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(7613, 3263)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "09eT8VFitX-d",
+        "outputId": "4e02bfc0-3e90-4b6f-bfdc-de72a3d7de69",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "import random\n",
+        "random_index = random.randint(0, len(train_df)-5)\n",
+        "random_index"
+      ],
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "6921"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 19
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "U-ZQLTHQsnBs",
+        "outputId": "5f1a234e-54ca-4d88-b783-6f5bc4d714a3",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Let's visualize some random training examples\n",
+        "import random\n",
+        "random_index = random.randint(0, len(train_df)-5) # create random indexes not higher than total number of samples\n",
+        "for row in train_df_shuffled[[\"text\", \"target\"]][random_index:random_index+5].itertuples() :\n",
+        "  _,text,target = row\n",
+        "  print(f\"Target: {target}\", \"(real disaster)\" if target > 0 else \"(not real disaster)\")\n",
+        "  print(f\"Text:\\n{text}\\n\")\n",
+        "  print(\"---\\n\")\n"
+      ],
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Target: 0 (not real disaster)\n",
+            "Text:\n",
+            "Best windows torrent client? was recommended Deluge but it looks like it was written 10 years ago with java swing and 'uses' worse\n",
+            "\n",
+            "---\n",
+            "\n",
+            "Target: 1 (real disaster)\n",
+            "Text:\n",
+            "California is battling its scariest 2015 wildfire so far. http://t.co/Lec1vmS7x2\n",
+            "\n",
+            "---\n",
+            "\n",
+            "Target: 1 (real disaster)\n",
+            "Text:\n",
+            "mentions of 'theatre +shooting' on Twitter spike 30min prior to $ckec collapse http://t.co/uuBOvy9GQI\n",
+            "\n",
+            "---\n",
+            "\n",
+            "Target: 0 (not real disaster)\n",
+            "Text:\n",
+            "trapped in its disappearance\n",
+            "\n",
+            "---\n",
+            "\n",
+            "Target: 1 (real disaster)\n",
+            "Text:\n",
+            "#Saudi Arabia: #Abha: Fatalities reported following suicide bombing at mosque; avoid area http://t.co/1xW0Z8ZeqW\n",
+            "\n",
+            "---\n",
+            "\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H934OlRdukg2"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
